--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,14 @@
         android:theme="@style/Theme.TakeNoteV2"
         tools:targetApi="31">
         <activity
+            android:name=".UpdateNoteActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".AddNoteActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" /> <!-- absolutely mandatory for "new" startActivityForResult method: activityResultLauncherAddNote -->
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
