--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,9 @@ android {
 
 dependencies {
 
+    // Room declarations
     def room_version = "2.4.3"
     def lifecycle_version = "2.6.0-alpha01"
-    def arch_version = "2.1.0"
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
