--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/tnv2"
+        android:icon="@drawable/takenote_logo_red"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/tnv2"
+        android:roundIcon="@drawable/takenote_logo_red"
         android:supportsRtl="true"
         android:theme="@style/Theme.TakeNoteV2"
         tools:targetApi="31">
