--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.TakeNoteV2"
         tools:targetApi="31">
         <activity
-            android:name=".UpdateNoteActivity"
+            android:name=".UpsertNoteActivity"
             android:exported="false"
             android:parentActivityName=".MainActivity" />
         <activity
