--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,29 @@
         android:theme="@style/Theme.TakeNoteV2"
         tools:targetApi="31">
         <activity
-            android:name=".UpsertNoteActivity"
-            android:exported="false"
-            android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".PinActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.PinV1"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".UpsertNoteActivity"
+            android:theme="@style/Theme.TakeNoteV2"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.TakeNoteV2"
+            android:exported="true">
         </activity>
     </application>
 
